<resources>
    <string name="app_name">GoodStudent</string>
    <string name="Choose">Cambia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="LoginGet">Iniciar Sesión</string>
    <string name="LoginPost">Registrarse</string>
    <string name="App">Good Student</string>
    <string name="LoginStatus">Registrate o inicia sesión</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Menu_contra">Cambia Contraseña</string>
    <string name="Menu_salir">Desconectar</string>
    <string name="Menu_editarperfil">Editar perfil</string>
    <string name="Login_PasswordRecuperarl">Recuperar contraseña</string>
    <string name="RegisUser">Nombre de usuario</string>
    <string name="Regispass">Contraseña</string>
    <string name="Regisnom">Nombre</string>
    <string name="Regisemail">Correo electronico</string>
    <string name="Regisidalum">Usuario moodel alumno</string>
    <string name="detailcurso">Curso:</string>
    <string name="detailactiv">Actividad:</string>
    <string name="detailnota">Nota:</string>
    <string name="detailprof">Profesor:</string>
    <string name="detailcoment">Comentario:</string>
    <string name="contactEnviar">Enviar</string>
    <string name="contactdesti">Destinatario</string>
    <string name="contactAsunt">Asunto</string>
    <string name="contactMese">Mensaje</string>
    <string name="resetPasstext">Contraseña antigua:</string>
    <string name="resetPasstextnew">Contraseña nueva:</string>
    <string name="resetPasstbutton">Cambiar contraseña:</string>
    <string name="bestnote">Mejor nota:</string>
    <string name="AvgNotes">Nota media :</string>
    <string name="lownote">Peor Nota:</string>
    <string name="toastChangepass">Contraseña modificada</string>
    <string name="ivalidpass">Contraseña muy corta.</string>


    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>

</resources>
