<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gs.CambiarPassword"
    android:background="@color/Fondo">

    <TextView
        android:id="@+id/passantictext"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resetPasstext"
        android:textSize="19dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_alignBottom="@+id/editText"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_toRightOf="@id/passantictext"
        android:id="@+id/editText" />
    <TextView
        android:id="@+id/passantictextnew"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/resetPasstextnew"
        android:textSize="19dp"
        android:layout_alignBaseline="@+id/editTextnew"
        android:layout_alignBottom="@+id/editTextnew"
        android:layout_toLeftOf="@+id/editTextnew"
        android:layout_toStartOf="@+id/editTextnew" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/editTextnew"
        android:layout_below="@+id/editText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_toRightOf="@+id/passantictext"
        android:layout_toEndOf="@+id/passantictext" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/buttoncha"
        android:text="@string/resetPasstbutton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:onClick="cambia"
        android:background="#8aa3cc"
        />

</RelativeLayout>
