<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo"
    tools:context="com.example.gs.Progres">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/textProgresBestNote"
        android:text="@string/bestnote"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="20dp"
        android:id="@+id/BestNoteProgres"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@id/textProgresBestNote"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="20dp"
        android:id="@+id/textProgresAVGNote"
        android:layout_below="@id/BestNoteProgres"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/AvgNotes"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/textProgresAVGNote"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/AVGNoteProgres"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="20dp"
        android:id="@+id/textProgresLowNote"
        android:layout_below="@id/AVGNoteProgres"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/lownote"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/textProgresLowNote"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/LowNoteProgres"/>


</RelativeLayout>
