<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gs.Contacta"
    android:orientation="vertical"
    android:background="@color/Fondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView android:text="@string/contactdesti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/txtForEmail"
            
            android:layout_weight="3">

        </TextView>
        <Spinner
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView android:text="@string/contactAsunt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtForSubject"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_weight="6">

        </TextView>
        <EditText android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:width="170dip"
            android:id="@+id/etSubject"
            android:layout_weight="1">
            </EditText>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView android:text="@string/contactMese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtForBody"
                android:layout_weight="10"
                android:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                >

            </TextView>
            <EditText android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="5"
                android:width="300dip"
                android:id="@+id/etBody"
                android:layout_weight="2">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"            >

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            android:text="@string/contactEnviar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-smallcaps"
            android:width="150dip"
            android:onClick="envia"
            android:layout_weight="1"
            android:background="#8aa3cc">
        </Button>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
